gobmkida/g0/atari_atari_find_attack_moves
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/atari_atari_find_attack_moves/src/engine/combination.c:1326:22: error: use of undeclared identifier 'unk_4D382E'
v4 = ( const char *)&unk_4D382E; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/atari_atari_find_attack_moves/src/obj/1/combination.o] Error 1
